--- a/caisse/src/renderer/style.css
+++ b/caisse/src/renderer/style.css
@@ -15,7 +15,7 @@ body, html {
   font-family: 'Segoe UI', sans-serif;
   height: 100vh;
   color: #333;
-  overflow: auto; 
+  overflow: hidden;
 }
 
 /* APP STRUCTURE */
